idp/dependencies/dex/dex.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dex
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dex
  name: dex
  namespace: dex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dex
  template:
    metadata:
      labels:
        app: dex
    spec:
      serviceAccountName: dex # This is created below
      containers:
      - image: ghcr.io/dexidp/dex:v2.32.0
        name: dex
        command: ["/usr/local/bin/dex", "serve", "/etc/dex/cfg/config.yaml"]
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
        resources:
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        ports:
        - name: https
          containerPort: 9443
        - name: telemetry
          containerPort: 5558
          protocol: TCP
        volumeMounts:
        - name: dex
          mountPath: /etc/dex/cfg
        - name: tls
          mountPath: /etc/dex/tls
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: telemetry
      volumes:
      - name: dex
        configMap:
          name: dex
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
      - name: tls
        secret:
          secretName: dex-cert
---
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  type: ClusterIP
  ports:
  - name: dex
    port: 9443
    #nodePort: 30011
    protocol: TCP
    targetPort: 9443
  selector:
    app: dex
